Pruebas funcionales de una API REST mediante Postman, handling of @Transaccional of write/reand, add exception for handling de bug of endpoint,time zona settings in properties